--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cancer Survival</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
-    <script src="data/data.json"></script>
+    <!-- <script src="data/data.json"></script> -->
     <script src="plot.js" async></script>
 </head>
 
